Chapter 15 completed with all tasks.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="crime_report_suspect">the suspect is %s.</string>
     <string name="crime_report_subject">CriminalIntent Crime Report</string>
     <string name="send_report">Send crime report via</string>
+    <string name="call_the_suspect">Call the suspect</string>
 
     <plurals name="subtitle_plural">
         <item quantity="one">%1$d crime</item>
