--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="crime_report_subject">CriminalIntent Crime Report</string>
     <string name="send_report">Send crime report via</string>
     <string name="call_the_suspect">Call the suspect</string>
+    <string name="suspect_is_not_chosen">A suspect is not chosen</string>
 
     <plurals name="subtitle_plural">
         <item quantity="one">%1$d crime</item>
