--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="call_the_suspect">Call the suspect</string>
     <string name="suspect_is_not_chosen">A suspect is not chosen</string>
     <string name="make_photo_toast">Make the photo first</string>
+    <string name="call_police_label">Need police!</string>
 
     <plurals name="subtitle_plural">
         <item quantity="one">%1$d crime</item>
